[package]
name = "hashlink2"
version = "0.1.0"
authors = ["Joel Wejdenstål <joel.wejdenstal@gmail.com>"]
edition = "2024"
description = "HashMap-like containers that hold their key-value pairs in a user controllable order"
repository = "https://github.com/xacrimon/hashlink2"
#documentation = "https://docs.rs/hashlink2"
readme = "README.md"
keywords = ["data-structures"]
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[features]
serde_impl = ["dep:serde"]

[dependencies]
hashbrown = { version = "0.15", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
rustc-hash = "2"
